[package]
name = "gst-mjpg"
version = "0.2.0"
edition = "2021"
authors = ["Bill Fraser <wfraser@codewise.org>"]
repository = "https://github.com/wfraser/gst-mjpg"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
anyhow = "1.0.71"
bytes = "1.4.0"
clap = { version = "4.3.0", features = ["derive"] }
futures = "0.3.28"
gstreamer = "0.20.5"
gstreamer-app = "0.20.0"
log = "0.4"
multipart-stream = "0.1.2"
stderrlog = "0.5.4"

[dependencies.hyper]
version = "0.14.26"
features = ["http1", "server", "stream", "tcp"]

[dependencies.tokio]
version = "1.28.2"
features = ["macros", "rt-multi-thread", "sync", "time"]

[dependencies.tokio-stream]
version = "0.1.14"
features = ["sync"]
