[package]
name = "gst-mjpg"
version = "0.2.2"
edition = "2021"
authors = ["Bill Fraser <bill@wfraser.dev>"]
repository = "https://github.com/wfraser/gst-mjpg"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
anyhow = "1.0.71"
bytes = "1.4.0"
clap = { version = "4.3.0", features = ["derive", "cargo", "string"] }
futures = "0.3.28"
gstreamer = "0.23.5"
gstreamer-app = "0.23.5"
http-body-util = "0.1.3"
log = "0.4"
#multipart-stream = "0.1.2"
stderrlog = "0.6.0"

[dependencies.hyper]
version = "1.6.0"
features = ["http1", "server"]

[dependencies.hyper-util]
version = "0.1.11"
features = ["tokio"]

[dependencies.multipart-stream]
version = "0.1.2"
git = "https://github.com/grafbase/multipart-stream-rs-fork.git"
branch = "http-1.0-fix-multipart-mixed"

[dependencies.tokio]
version = "1.28.2"
features = ["macros", "net", "rt-multi-thread", "sync", "time"]

[dependencies.tokio-stream]
version = "0.1.14"
features = ["sync"]
